MomentumClone.css
/** TABLE OF CONTENTS
  1. Resets, etc 
  2. General Styles
  3. Weather
  4. Main #container
  5. Quote
**/


/* 1. Resets, etc - Paul Irish Border-Box*/
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html{
  height: 100%;
  min-height: 100vh;
  margin: 0;
  font-size: 90%;  
}

@media (min-width: 36em){
  /*480 px*/
 body {
    font-size: 100%;
  }
}

/** GENERAL STYLES **/
body{
  position: relative;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center; /** need to calibrate more **/
  font-family: Helvetica, 'Segoe UI', Tahoma, Arial sans-serif;
  color: white;
  line-height: 1.2;
  text-shadow: 1px 1px 3px black;  
}

h1, h2, h3{
  margin: 0;
  padding: 0;
}

/** WEATHER **/
#weather-container{
  text-align:right;
  margin-right: 10px;
}

.wi {
  padding-right: 0.2em;
}

.wi, 
#temperature { /* weather icon font */
  font-size: 1.5em;
  font-weight: 700;
}

#region {
  margin-top: -0.6em;
  font-size: 0.8em;
  text-transform: uppercase;
  letter-spacing: 0.045em;
}

/** Main #container **/
#container{
  width: 100%;
  margin-top: 5%;
  padding: 1em;
  text-align: center;
  opacity:0;  
}

#date {
  margin-top: 3em;
  font-size: 1.5em;
  letter-spacing: 0.15em;
}

@media (max-height: 48em){
  #date {
    margin-top: 0;
    margin-bottom: 0;
  }  
}

#time{
  margin: 0;
  font-size: 8em;
  letter-spacing: -0.02em;
}

#greeting {
  margin-bottom: 1em;
  font-size: 2.5em;
  font-weight: 400;
}

#mainFocus { 
  margin-top: 3em;
  margin-bottom: 0.5em;
  font-size: 1.5em;
  font-weight: 400;
}

@media (min-width: 30em){
  /*480 px*/
  #time{
    font-size: 10em;
  }

  #greeting{
    font-size: 3em;
  }

  #mainFocus { 
    font-size: 1.8em;
  } 
}

/*Input for Today's Focus*/
.focus-input{
  width: 100%;
  background: none;
  border: none;
  border-bottom: 3px solid white;
  padding: 0.5em;
  font-size: 180%;
  color: white;
  text-align: center;
}

@media (min-width: 533px){
  .focus-input {
    width: auto;
    padding: 0 1em;
  }
}

.focus-input:focus{
  outline: none;
  border: none;
  border-bottom : 2px solid white;
}


/** today's goals **/
ul.to-do{
  list-style-type: none;
  padding: 0;
}

.to-do li{
  list-style-type: none;
  font-size: 2em;
  margin-top: 15px;
}

/** Today's Goals Controls **/
.remove{
  margin-left: 20px;
  transition: all 0.7s ease;
  border: 1px solid white;
  border-radius: 100%;
  background-color: #FF6347;
  outline:none;
  padding-left: 0;
}

.remove:hover{
  color: #B22222;
  cursor: pointer;
  background-color: grey;
  border-color: #B22222;
}

.doneTodo {
  color: #fff;
  background-color: #6496c8;
  border: 2px solid white;
  border-radius: 100%;
  outline:none;
  transition: all 0.7s ease;
  margin-right:20px;
}

.doneTodo:hover {
  cursor: pointer;
  background-color: blue;
  color:#ADFF2F;
}

.done{
  text-decoration: line-through;
  color: #4B0082;
}

/** QUOTE **/
#quote-container{
  width: 70%;
  margin: 0 15%;
  text-align: center;
  position: fixed;
  bottom: 0;
  opacity: 0;  
}

@media (max-height: 44em){
  #quote-container {
    position: relative;
    width: 90%;
    margin: 2em auto 0;
  }  
}


/*Quote Line */
#randomQuote{
  margin-bottom: 0;
  text-align:center;
  text-shadow: none;
  padding: 0.5em;
  display: block;
}

.quoteAuthor{
  text-align: center;
  transform: translateY(-30px);
  opacity : 0; 
  visibility: none;
  transition: all 0.5s ease-in-out;
}

@media and (max-height: 48em){

}

#randomQuote:hover{
  cursor: pointer;  
}

#randomQuote:hover + .quoteAuthor{
  opacity: 1;
  visibility: visible;
  transform: translateY(-8px);
}

